--- a/class.ipynb
+++ b/class.ipynb
@@ -148,6 +148,98 @@
         "for i in array:\n",
         "  i.details()"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#Question 3\n",
+        "class Account:\n",
+        "  def details(self, acno, acho, amount):\n",
+        "    self.acountno = acno\n",
+        "    self.acountholdername = acho\n",
+        "    self.amount = amount\n",
+        "  def Deposit(self, acno):\n",
+        "    if self.acountno == acno:\n",
+        "      print(\"\"\"Login sucessfull\n",
+        "      Enter amount to deposit: \"\"\")\n",
+        "      amt = int(input())\n",
+        "      print(f\"{amt} deposited sucessfully.\")\n",
+        "    else:\n",
+        "      print(\"You entered wrong details.\")\n",
+        "  def Withdraw(self, acno, acho):\n",
+        "    if self.acountno == acno and self.acountholdername == acho:\n",
+        "      print(\"\"\"Login Sucessfull\n",
+        "      Enter Amount to withdraw: \"\"\")\n",
+        "      amt = int(input())\n",
+        "      if amt > self.amount:\n",
+        "        print(\"Out of balance\")\n",
+        "      else:\n",
+        "        self.amount = self.amount - amt\n",
+        "        print(f\"Withdrawn {amt} rupees\")\n",
+        "    else:\n",
+        "      print(\"You enterred wrong details.\")\n",
+        "  def CheckBal(self, acno, acho ):\n",
+        "    if self.acountno == acno and self.acountholdername == acho:\n",
+        "      print(f\"Login sucessful, your account balance is {self.amount}\")  \n",
+        "    else:\n",
+        "      print(\"You entered wrong details.\")\n",
+        "  def Displayac(self, anco):\n",
+        "      print(f\"\"\" Your account details are:\n",
+        "        Account Number: {self.acountno}\n",
+        "        Account Holder name: {self.acountholdername}\n",
+        "        Amount = {self.amount}\"\"\")\n",
+        "\n",
+        "P1 = Account()\n",
+        "P1.details(111, \"Aman\", 774)\n",
+        "P2 = Account()\n",
+        "P2.details(112, \"Sahil\", 1024)\n",
+        "P3 = Account()\n",
+        "P3.details(113, \"Rahul\", 10000)\n",
+        "P4 = Account()\n",
+        "P4.details(114, \"Ted\", 20)\n",
+        "P1.Deposit(111)\n",
+        "P1.Displayac(111)\n",
+        "P2.Withdraw(112, \"Sahil\")\n",
+        "P2.Displayac(112)\n",
+        "P3.CheckBal(113, \"Rahul\")\n",
+        "P4.Displayac(114)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#Question 4\n",
+        "class Student:\n",
+        "  def details(self, name , usn, mark_eng, mark_maths , mark_science):\n",
+        "    self.name = name\n",
+        "    self.usn = usn\n",
+        "    self.mark_eng = mark_eng\n",
+        "    self.mark_maths = mark_maths\n",
+        "    self.mark_science = mark_science\n",
+        "    self.nlist = [\"arun\", \"ram\"]\n",
+        "    self.nlist.append(name)\n",
+        "    self.Emarks = [87, 77]\n",
+        "    self.Emarks.append(mark_eng)\n",
+        "    self.Mmarks = [54, 53]\n",
+        "    self.Mmarks.append(mark_maths)\n",
+        "    self.Smarks = [66, 69]\n",
+        "    self.Smarks.append(mark_science)\n",
+        "  def display(self, name, nlist, usn, Emarks, Mmarks, Smarks):\n",
+        "    for i in range(0,3):\n",
+        "      if name == nlist[i]:\n",
+        "        print(f\"Name = {nlist[i]},  USN = {usn} ,  Marks in English = {Emarks[i]} ,  Marks in Maths = {Mmarks[i]} ,  Marks in Science = {Smarks[i]}\")\n",
+        "        exit\n",
+        "      \n",
+        "a1 = Student()\n",
+        "a1.details(\"rahul\", 123, 76, 56, 45)\n",
+        "a1.display(\"rahul\", a1.nlist, a1.usn, a1.Emarks, a1.Mmarks, a1.Smarks)"
+      ]
     }
   ],
   "metadata": {
