--- a/class.ipynb
+++ b/class.ipynb
@@ -240,6 +240,77 @@
         "a1.details(\"rahul\", 123, 76, 56, 45)\n",
         "a1.display(\"rahul\", a1.nlist, a1.usn, a1.Emarks, a1.Mmarks, a1.Smarks)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#Question-5\n",
+        "class Patient:\n",
+        "  def __init__(self):\n",
+        "    self.name = input(\"Name: \")\n",
+        "    self.admit_date = input(\"Admit Date(dd/mm/yy): \")\n",
+        "    i = int(input(\"Enter no of symptoms: \"))\n",
+        "    self.symptom = []\n",
+        "    self.gnum = 0\n",
+        "    self.onum = 0\n",
+        "    for j in range(1,i+1):\n",
+        "      temp = input(f\"symptom {j}: \")\n",
+        "      self.symptom.append(temp)\n",
+        "    self.oxy = int(input(\"oxygen level: \"))\n",
+        "    self.dis_date = input(\"Discharge Date(dd/mm/yy): \")\n",
+        "  def ward(self):\n",
+        "    if self.oxy <90:\n",
+        "      print(\"Shift patient to ICU and keep on Oxygen\")\n",
+        "      self.onum = self.onum + 1\n",
+        "    else:\n",
+        "      print(\"Patient's health is normal shift him to General Ward\")\n",
+        "      self.gnum = self.gnun + 1\n",
+        "  def patient_num(self):\n",
+        "    print(f\"Patient in General ward are : {self.gnum}.\")\n",
+        "    print(f\"Total Patients admitted are: {self.onum+self.gnum}.\")\n",
+        "  def display(self):\n",
+        "    print(f\"Patient Name: {self.name}  Patient's date of admit: {self.admit_date}   Patient's symptoms: {self.symptom}    Patient's Oxygen Level: {self.oxy}   Patient's date of discharge: {self.dis_date}\")\n",
+        "\n",
+        "\n",
+        "p1= Patient()\n",
+        "p1.display()\n",
+        "p1.ward()\n",
+        "p1.patient_num()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#Question-6\n",
+        "class Time:\n",
+        "  def __init__(self):\n",
+        "    self.hours = int(input(\"Enter hours: \"))\n",
+        "    self.minutes = int(input(\"Minutes: \"))\n",
+        "    self. seconds = int(input(\"Seconds:  \"))\n",
+        "\n",
+        "  def display_time(self):\n",
+        "    if self.hours > 9:\n",
+        "      print(\"{0}:\".format(self.hours), end='')\n",
+        "    else:\n",
+        "      print(\"0{0}:\".format(self.hours), end='')\n",
+        "    if self.minutes > 9:\n",
+        "      print(\"{0}:\".format(self.minutes), end='')\n",
+        "    else:\n",
+        "      print(\"0{0}:\".format(self.minutes), end='')\n",
+        "    if self.seconds > 9:\n",
+        "      print(\"{0}\".format(self.seconds), end='')\n",
+        "    else:\n",
+        "      print(\"0{0}\".format(self.seconds), end='')\n",
+        "\n",
+        "t = Time()\n",
+        "t.display_time()"
+      ]
     }
   ],
   "metadata": {
